--- a/t/0.css
+++ b/t/0.css
@@ -1,6 +1,6 @@
 body{ background: #3980c3;}
 #div0{ text-align:center;width:848px;height:480px;margin-left: auto;margin-right: auto;}
-#div1{ width:848px; height:20px; background-image: url(div1.png); overflow:hidden; color:white;position:relative;margin:0 auto;}
+#div1{ width:848px; height:20px; top:-20px;background-image: url(div1.png); overflow:hidden; color:white;position:relative;margin:0 auto;}
 #div2{ width:20px; height:20px; background-color:rgba(255,255,255,0.8); position:absolute; left:0;}
 #bimg{ 
 	margin-left: auto;
